--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=8b070b2b4b50389251cd2f136b8975b1
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=postgresql://developer:developer@127.0.0.1:5432/moncrm?serverVersion=11&charset=utf8
+DATABASE_URL=postgresql://developer:developer@127.0.0.1:5432/moncrm?charset=utf8
 ###< doctrine/doctrine-bundle ###
