--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "firebase/php-jwt": "^5.2",
+        "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/security-bundle": "5.1.*",
+        "symfony/translation": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
