--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,7 @@ security:
             provider: app_user_provider
             guard:
                 authenticators:
-                    - App\Security\JWTAuthenticator
+                    - App\Modules\Auth\Security\JWTAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
