--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,5 +1,5 @@
 controllers:
-    resource: ../../src/Modules/*/Controller/*
+    resource: ../../src/Module/*/Controller/*
     type: annotation
     prefix: /backend
     trailing_slash_on_root: false
