--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,8 +29,8 @@ services:
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
-        namespace: App\Modules\
-        resource: '../src/Modules/*/Controller/'
+        namespace: App\Module\
+        resource: '../src/Module/*/Controller/'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
