--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,8 @@ security:
             guard:
                 authenticators:
                     - App\Module\User\Security\JWTAuthenticator
+            logout:
+                path: auth_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
