--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,6 @@
 security:
+    enable_authenticator_manager: true
+
     encoders:
         App\Entity\User:
             algorithm: auto
@@ -13,14 +15,14 @@ security:
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
+        public:
+            pattern: ^/backend/(auth|out)/
             security: false
         main:
-            anonymous: true
             lazy: true
             provider: app_user_provider
-            guard:
-                authenticators:
-                    - App\Module\User\Security\JWTAuthenticator
+            custom_authenticators:
+                - App\Security\JWTAuthenticator
 
             # Не храним пользователя в сессии
             stateless: true
@@ -34,5 +36,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/backend/open-home, roles: PUBLIC_ACCESS }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
